# MarketPlaceServer

./: .gitignore  MainDiagramm.drawio
MarketDataBaseEditor/: CMakeLists.txt  LoginForm.qml  TextInput_normal.qml  main.cpp
MarketDataBaseEditor/RegistrationWindow/: LoginForm.qml  loginform.h
MarketDataBaseEditor/RegistrationWindow/TextInput_normal/: TextInput_normal.qml
MarketDataBaseEditor/Widgets/: CurButton.qml
Server/Server/: Server.sln
Server/Server/Server/: Server.cpp  Server.h  ServerCommands.h  ServerRequestDispatcher.cpp  ServerRequestDispatcher.h  main.cpp
